adding css code

--- a/main.html
+++ b/main.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="se.css">
+<head><link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Example</title>
 </head>
 <body>
-    <h1 align="center"><font color="white">FOR U</font> </h1>
-        <hr>
+    <h1 align="center"><font color="white">THANK YOU FOR VISITING</font> </h1>
     <div  class="container">
         
         <img src="nature.png" height="450">
